Use distinct JPA properties
Upgrade the sample to disable the JPA auto-configuration altogether and
use two different sets of JPA configuration.

This involve a bit of copy/paste for now but maybe we can improve that in
Spring Boot itself.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
-
 app.customer.datasource.url=jdbc:h2:mem:customers;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 app.customer.datasource.driver-class-name=org.h2.Driver
+app.customer.jpa.properties.hibernate.hbm2ddl.auto=create
 
 app.order.datasource.url=jdbc:h2:mem:orders;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 app.order.datasource.driver-class-name=org.h2.Driver
+app.order.jpa.properties.hibernate.hbm2ddl.auto=create
