--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.12.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
 
